# mymess

./: .env.example  API.md  CMakeLists.txt  DEPLOY.md  Makefile  README.md  TROUBLESHOOTING.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: build.yml
client/core/: CMakeLists.txt  Dockerfile  README.md
client/core/include/messenger/: AuthManager.hpp  ChatManager.hpp  CryptoEngine.hpp  EventManager.hpp  INetworkClient.hpp  KeyManager.hpp  SessionStore.hpp
client/core/src/: CryptoEngine.cpp  NetworkClient.cpp
client/core/tests/: test_cryptoengine.cpp  test_keymanager.cpp
client/gui/: CMakeLists.txt  Dockerfile
client/gui/include/: inetworkclient.h  thememanager.h
client/gui/include/crypto/: icryptosession.h  ratchetwrapper.h
client/gui/include/db/: localstore.h
client/gui/include/ui/: chatwindow.h  lightboxdialog.h
client/gui/include/utils/: chat.h  message.h
client/gui/include/viewmodels/: chatlistmodel.h  messagelistmodel.h
client/gui/resources/: resources.qrc
client/gui/resources/qss/: dark.qss  light.qss
client/gui/src/: main.cpp
client/gui/src/crypto/: ratchetwrapper.cpp
client/gui/src/db/: localstore.cpp
client/gui/src/ui/: chatwindow.cpp  lightboxdialog.cpp
client/gui/src/viewmodels/: chatlistmodel.cpp  messagelistmodel.cpp
client/gui/tests/: test_models.cpp  test_theming.cpp
client/gui/ui/: ChatWindow.ui
server/: .gitignore  CMakeLists.txt  Dockerfile  README.md
server/docker/: docker-compose.yml
server/include/: auth_service.h  chat_service.h  db.h  event_service.h  key_service.h  redis_client.h  utils.h
server/migrations/: 001_init.sql
server/src/: auth_service.cpp  chat_service.cpp  db.cpp  event_service.cpp  key_service.cpp  main.cpp  redis_client.cpp  utils.cpp
server/tests/: test_auth.cpp
shared/: CMakeLists.txt
shared/proto/: messenger.proto
